--- a/Source/Journals/PaperTesis/Revision Files/Rev01/Responses.tex
+++ b/Source/Journals/PaperTesis/Revision Files/Rev01/Responses.tex
@@ -30,14 +30,17 @@ We agree with the suggestions, and we have proceeded accordingly.
 \fbox{\includegraphics[width=\linewidth]{Critical}}
 
 \begin{itemize}
-	\item [-] \textcolor{blue}{We added Table 5 and its corresponding analysis.}
+	\item [-] \textcolor{blue}{We added Table~5 with the sample variance of the estimators for several cases of $L$ and of $\alpha$, and its corresponding analysis.}
 	
-	\item [-] \textcolor{blue}{We include Fig. $5$ and $6$. The former displays the distribution of estimators for $\alpha=-3$, $L=3$ and for different sample sizes including $n=500$. The latter exibit the density function for different values of the texture parameter, and for a sample size equal to $500$. We also present the values of skewness, kurtosis in Table $4$ and $5$ respectively. It is accompanied by an analysis of the figures and tables.}
+	\item [-] \textcolor{blue}{We included Figs.~5 and~6. 
+		The former displays the estimators' sample density for $\alpha=-3$, $L=3$ and for several sample sizes including $n=500$. 
+		The latter exibits the sample density function for different values of the texture parameter, and for samples of size $500$. 
+	We also present the values of skewness, kurtosis in Tables~4 and~5, respectively. We analyzed these figures and tables, and draw conclusions about the finite-sample and asymptotic distributions of the estimators.}
 	
-	\item [-] \textcolor{blue}{Thank for your observation. There was an error in Fig. $15$. We fixed this error and also add Table $11$ which shows the length of the bootstrap confidence intervals.}
+	\item [-] \textcolor{blue}{Thank you very much for this careful observation. There was an error in Fig.~15. We fixed this error and also added Table~11, which shows the length of the bootstrap confidence intervals.}
 	
-	\item [-] \textcolor{blue}{It can be seen in Table $11$ that the length of the confidence intervals decrease as the sample size increases.} 
-	For instance, Tables 4-7 must present their respective standard errors.
+	\item [-] \textcolor{blue}{It can be seen in Table~11 that the length of the confidence intervals decrease as the sample size increases.} 
+	For instance, Tables 4-7 present their respective standard errors.
 	\textcolor{blue}{Falta esto útlimo}
 \end{itemize}
 
@@ -51,8 +54,18 @@ We agree with the suggestions, and we have proceeded accordingly.
 \AR We have made the following changes:
 \begin{itemize}
 \item We have added the reference by \citet{SARImageStatisticalModelingPartISinglePixelStatisticalModels}, which is a modern and comprehensive survey about speckle.
-\item 
-\item 
+\item Than you very much for this deep observation. We have rephrased our statement, and now we say that
+	\begin{quote}
+		Tison et al.~[50] showed that estimators based on logcumulants 
+		are well-suited to model amplitude single-look data from urban areas, where very large values are frequently observed.
+		Nevertheless, that work overlooks the fact that estimation under the $\mathcal G^0$ distribution is more sensitive to very small values rather than to extremely large ones.
+		In this work, we explore this fact and propose suitable solutions using kernels.
+	\end{quote}
+\item We struggled with this point, as English is not our native language, and we found the following answer in \url{https://forum.wordreference.com/threads/an-or-a-before-an-acronym-starting-with-m-h.2554395/}
+\begin{center}
+	\includegraphics[width=\linewidth]{AorAN.png}
+\end{center}
+According this recommendation, we write ``an MDE''.
 \item We added ``and $\Omega$ is the parameter space.'' to the sentence after~(1).
 \item We changed the text as follows:
 		\begin{quote}
